--- a/1660/1660.md
+++ b/1660/1660.md
@@ -1,16 +1,33 @@
-n   dp[n]   사면체
-0   0       0
+n   dp[n]
+0   0
 
-1   1       0
-2   2       0
-3   3       0
+1   1                   dp[0] + 1
+2   1 + 1               dp[1] + 1
+3   1 + 1 + 1           dp[2] + 1
+4   1(4)                dp[0] + 1
+5   1(4) + 1            dp[1] + 1
+6   1(4) + 1 + 1        dp[2] + 1
+7   1(4) + 1 + 1 + 1    dp[3] + 1
+8   1(4) + 1(4)         dp[4] + 1
+9   1(4) + 1(4) + 1     dp[5] + 1        
+10  1(10)               dp[0] + 1
+11  1(10) + 1           dp[1] + 1
+12  1(10) + 1 + 1       dp[2] + 1
+13  1(10) + 1 + 1 + 1   dp[3] + 1
+14  1(10) + 1(4)        dp[4] + 1
+15  1(10) + 1(4) + 1    dp[5] + 1
+16  1(10) + 1(4) + 1 + 1        dp[6] + 1
+17  1(10) + 1(4) + 1 + 1 + 1    dp[7] + 1
+18  1(10) + 1(4) + 1(4)         dp[8] + 1
+19  1(10) + 1(4) + 1(4) + 1     dp[9] + 1
+20  1(20)                       dp[0] + 1
 
-4   1       1
-5   2       1
-6   3       1
-7   4       1
+일정한 주기마다 dp[0] + 1
 
-8   2       2
-9   3       2
-
-10  1       1
+1   +1
+4   +3  +2
+10  +6  +3
+20  +10 +4
+35  +15 +5
+56  +21 +6
+84  +28 +7
